<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <groupId>com.fryfrog</groupId>
    <artifactId>fryfrog-hub-api</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>fryfrog-hub-api</name>
    <description>Unified media backend API for music, comics, ebooks, and video</description>

    <modules>
        <module>common</module>
        <module>music</module>
        <module>comic</module>
        <module>video</module>
        <module>ebook</module>
        <module>app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springdoc.version>2.5.0</springdoc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fryfrog</groupId>
                <artifactId>fryfrog-hub-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fryfrog</groupId>
                <artifactId>fryfrog-hub-music</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fryfrog</groupId>
                <artifactId>fryfrog-hub-comic</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fryfrog</groupId>
                <artifactId>fryfrog-hub-video</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fryfrog</groupId>
                <artifactId>fryfrog-hub-ebook</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
